# Chess_Online

./: .gitignore  CMakeLists.txt  README.md  \  build.py  configure.py  leaks.py  main.cpp  main_client.cpp  main_server.cpp  run.py
include/: board.h  client.h  cooldown.h  game.h  message.h  pieces.h  server.h
src/: board.cpp  board.h  client.cpp  client.h  cooldown.cpp  game.cpp  game.h  message.cpp  message.h  server.cpp  server.h
